2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Treat TimedOut and Aborted as failed steps too.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Updated to use the new Job object.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Slightly improve logging messages.

2009-11-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Cygwin ends up with an ugly mess of path
	separators, force them all to unix-style separators.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Add support for C[PLUS]_INCLUDE_PATH.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Updated according to locking changes.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: If upload of a file throws an exception,
	continue with the next file instead of aborting everything.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Use safe remote methods (safe as in will retry
	for a specified amount of time if connection fails).

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BuildInfo.cs:
	* Builder.cs: Request multiple work from the server. If work
	failed for a hostlane, don't do any more work for that hostlane
	(since we don't know if we're supposed to work on it or not).

2009-06-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Don't spam the server 20 times a minute if there
	is nothing to do.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Put the upper limit in the right place.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Quick hack to do more than one iteration of
	builder duty per program invocation.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Need to set BUILD_HOST now that we don't source
	config.sh anymore.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Add a using clause, seems like older gmcs doesn't
	work without it.
