@@ -1,3 +1,8 @@
+2010-05-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* FileUtilities.cs: Add a directory deletion method that doesn't fail with
+	read-only files.
+
 2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* FileUtilities.cs: Remove the external gunzip method, just use the
